[project]
name = "ldp-bandit"
version = "1.0.0"
description = "Generalized Linear Bandits with Local Differential Privacy Official Repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "zarr>=3.1.6",
]
